Fixed generated id and required fields
